clean up wordpress posts (kramdown image syntax, wpaudio)

--- a/_posts/2007-05-29-smashup.md
+++ b/_posts/2007-05-29-smashup.md
@@ -4,66 +4,33 @@ title: Smashup
 date: 2007-05-29T08:43:13+00:00
 author: benchun
 layout: post
-guid: http://www.benchun.net/?p=40
-permalink: /2007/05/smashup/
-enclosure:
-  - |
-    |
-        http://mp3.benchun.net/benchun-smashup.mp3
-        122842361
-        audio/mpeg
-        
-categories:
-  - Music
 ---
-<img class="alignleft size-medium wp-image-90" title="Smashup" src="http://www.benchun.net/wp-content/uploads/2007/05/smashup-300x300.gif" alt="" width="300" height="300" srcset="http://benchun.net/wp-content/uploads/2007/05/smashup-150x150.gif 150w, http://benchun.net/wp-content/uploads/2007/05/smashup-300x300.gif 300w, http://benchun.net/wp-content/uploads/2007/05/smashup.gif 440w" sizes="(max-width: 300px) 100vw, 300px" />Retro party music for the 23rd century. Put a brick on the gas pedal.
+![Smashup](/wp-content/uploads/2007/05/smashup-300x300.gif){: srcset="/wp-content/uploads/2007/05/smashup-150x150.gif 150w, /wp-content/uploads/2007/05/smashup-300x300.gif 300w, /wp-content/uploads/2007/05/smashup.gif 440w"}{:  sizes="(max-width: 300px) 100vw, 300px"}
 
-[benchun &#8211; Smashup](http://mp3.benchun.net/benchun-smashup.mp3){.wpaudio}
+Retro party music for the 23rd century. Put a brick on the gas pedal.
 
-<!--more-->
+[benchun &#8211; Smashup](http://mp3.benchun.net/benchun-smashup.mp3){: .wpaudio}
 
-Tom Burbank – Blabber Mouth
-  
-Coldcut – True Skool
-  
-Apparat – Holdon (Modeselektor Remix)
-  
-Disruption – Last Level (Lazer Sword Bonus Round Remix)
-  
-Santogold – You’ll Find A Way (Switch & Graeme Sinden Remix)
-  
-Nas – If I Ruled the World (feat. Lauren Hill)
-  
-Dan Mangan – Little Snitch (Kraddy’s Cash Rules Everything Around Me Remix)
-  
-Chemical Brothers – Galvanize (Streetlab Remix)
-  
-DJ Blaqstarr – Shake It to the Ground (Detboi Shakecore Remix)
-  
-Phon.o – Kyoto Station 6
-  
-Ott – Splitting an Atom
-  
-Lux – Attractor Beam
-  
-Traxamillion – Bring it Back (Chris De Luca vs. Phon.o remix)
-  
-Jahcoozi – Tits of My Origin (Black Barbie Rmx)
-  
-Uffie – Pop the Glock (SebastiAn Remix)
-  
-Dr. Octagon – Ants (feat. DJ Dexter)
-  
-Scratch Perverts – Stand By
-  
-Deltron 3030 – Madness
-  
-Mr. No Hands vs. Bassbin Twins – Adrenalin Ltd
-  
-Rob Base & DJ E-Z Rock – Joy & Pain
-  
-Freq Nasty – Come Let Me Know
-  
-M.I.A. – Hit That
-  
+Tom Burbank – Blabber Mouth  
+Coldcut – True Skool  
+Apparat – Holdon (Modeselektor Remix)  
+Disruption – Last Level (Lazer Sword Bonus Round Remix)  
+Santogold – You’ll Find A Way (Switch & Graeme Sinden Remix)  
+Nas – If I Ruled the World (feat. Lauren Hill)  
+Dan Mangan – Little Snitch (Kraddy’s Cash Rules Everything Around Me Remix)  
+Chemical Brothers – Galvanize (Streetlab Remix)  
+DJ Blaqstarr – Shake It to the Ground (Detboi Shakecore Remix)  
+Phon.o – Kyoto Station 6  
+Ott – Splitting an Atom  
+Lux – Attractor Beam  
+Traxamillion – Bring it Back (Chris De Luca vs. Phon.o remix)  
+Jahcoozi – Tits of My Origin (Black Barbie Rmx)  
+Uffie – Pop the Glock (SebastiAn Remix)  
+Dr. Octagon – Ants (feat. DJ Dexter)  
+Scratch Perverts – Stand By  
+Deltron 3030 – Madness  
+Mr. No Hands vs. Bassbin Twins – Adrenalin Ltd  
+Rob Base & DJ E-Z Rock – Joy & Pain  
+Freq Nasty – Come Let Me Know  
+M.I.A. – Hit That  
 Ty – This Here Music (feat. Speech)
