--- a/_posts/2012-04-05-standby.md
+++ b/_posts/2012-04-05-standby.md
@@ -4,7 +4,7 @@ title: Standby
 date: 2012-04-05T03:03:12+00:00
 author: benchun
 layout: post
-guid: http://benchun.net/?p=250
+guid: /?p=250
 permalink: /2012/04/standby/
 enclosure:
   - |
@@ -12,54 +12,32 @@ enclosure:
         http://mp3.benchun.net/benchun-standby.mp3
         104073768
         audio/mpeg
-        
+
 categories:
   - Music
 ---
- <img class="alignleft size-full wp-image-251" src="http://benchun.net/wp-content/uploads/2012/04/cover-300.jpg" alt="" width="300" height="300" srcset="http://benchun.net/wp-content/uploads/2012/04/cover-300-150x150.jpg 150w, http://benchun.net/wp-content/uploads/2012/04/cover-300.jpg 300w" sizes="(max-width: 300px) 100vw, 300px" />This mix is, among other things: a half-remembered dream, a plot twist, an indulgence, that word on the tip of your tongue, a tradition trying to stop itself, a long time coming, a lovely view, life with a piano, life in midair, and not the fruit of experience, but experience itself.
+![Standby](/wp-content/uploads/2012/04/cover-300.jpg){: srcset="/wp-content/uploads/2012/04/cover-300-150x150.jpg 150w, /wp-content/uploads/2012/04/cover-300.jpg 300w"}{: sizes="(max-width: 300px) 100vw, 300px"}
 
-[benchun &#8211; Standby](http://mp3.benchun.net/benchun-standby.mp3){.wpaudio}
+This mix is, among other things: a half-remembered dream, a plot twist, an indulgence, that word on the tip of your tongue, a tradition trying to stop itself, a long time coming, a lovely view, life with a piano, life in midair, and not the fruit of experience, but experience itself.
 
-<!--more-->
+[benchun &#8211; Standby](http://mp3.benchun.net/benchun-standby.mp3){: .wpaudio}
 
-
-  
-<br clear="left" />
-  
-Chance Waters x Gotye &#8211; Somebody That I Used To Know (Remixed by One Above)
-  
-Bonobo &#8211; The Keeper (Banks Remix)
-  
-M83 &#8211; Midnight City (Trentemøller Remix)
-  
-Random Rab &#8211; Apparently
-  
-The Roots &#8211; Make My
-  
-Polica &#8211; Wandering Star
-  
-Starfire &#8211; Shapeshifter
-  
-Tama (Mali) &#8211; Snimbe (The Polish Ambassador Remix)
-  
-Gypsy & Cat &#8211; The Piper&#8217;s Song
-  
-Gypsy & Cat &#8211; The Piper&#8217;s Song (Aeroplane Remix)
-  
-The Polish Ambassador &#8211; Save, Develop, Protect (Stephen Jacobs Remix)
-  
-Knowa Knowone &#8211; Champagne and Kittens
-  
-J. Cole &#8211; Work Out
-  
-Metric &#8211; Help, I&#8217;m Alive (Immuzikation B-ting Like a Hammer Remix)
-  
-Miike Snow &#8211; Animal (Peter Bjorn and John Remix)
-  
-DJ Shadow &#8211; Blood on the Motorway
-  
-Apparat &#8211; Song of Los
-  
-Elsiane &#8211; Mend (To Fix, To Repair)
-  
-James Blake &#8211; Limit to Your Love (Mokhov Remix)
+Chance Waters x Gotye &#8211; Somebody That I Used To Know (Remixed by One Above)  
+Bonobo &#8211; The Keeper (Banks Remix)  
+M83 &#8211; Midnight City (Trentemøller Remix)  
+Random Rab &#8211; Apparently  
+The Roots &#8211; Make My  
+Polica &#8211; Wandering Star  
+Starfire &#8211; Shapeshifter  
+Tama (Mali) &#8211; Snimbe (The Polish Ambassador Remix)  
+Gypsy & Cat &#8211; The Piper&#8217;s Song  
+Gypsy & Cat &#8211; The Piper&#8217;s Song (Aeroplane Remix)  
+The Polish Ambassador &#8211; Save, Develop, Protect (Stephen Jacobs Remix)  
+Knowa Knowone &#8211; Champagne and Kittens  
+J. Cole &#8211; Work Out  
+Metric &#8211; Help, I&#8217;m Alive (Immuzikation B-ting Like a Hammer Remix)  
+Miike Snow &#8211; Animal (Peter Bjorn and John Remix)  
+DJ Shadow &#8211; Blood on the Motorway  
+Apparat &#8211; Song of Los  
+Elsiane &#8211; Mend (To Fix, To Repair)  
+James Blake &#8211; Limit to Your Love (Mokhov Remix)  
