missed an image tag

--- a/_posts/2002-03-15-live-at-111.md
+++ b/_posts/2002-03-15-live-at-111.md
@@ -5,7 +5,7 @@ date: 2002-03-15T21:28:56+00:00
 author: benchun
 layout: post
 ---
-<img title="logo_21" src="http://benchun.net/wp-content/uploads/2002/03/logo_21.png" alt="" width="215" height="112" />
+![Live at 111](/wp-content/uploads/2002/03/logo_21.png)
 
 During WMC all the big promoters and DJs are out of town, which gives other people the chance to pick up nights. This was a fun one where everything seemed to just work.
 
