use jquery audioplayer plugin for audio

--- a/_posts/1999-08-08-summer-of-99.md
+++ b/_posts/1999-08-08-summer-of-99.md
@@ -9,8 +9,12 @@ layout: post
 
 The Summer of ’99 is dedicated to all those whose love and energy made this combination of music and time and place so special to me. Karen, Brett, Jed, Matt, Anthony, Mac, Raquel, Julia, Ben, Karla, Jill, Toshi, Jenny, and the rest of our comrades… thank you.
 
-[benchun &#8211; Summer of 99 Side 1](http://mp3.benchun.net/benchun-summer-of-99-side-1.mp3){: .wpaudio}  
-[benchun &#8211; Summer of 99 Side 2](http://mp3.benchun.net/benchun-summer-of-99-side-2.mp3){: .wpaudio}
+Side1
+<audio src="http://mp3.benchun.net/benchun-summer-of-99-side-1.mp3" preload="auto" controls></audio>  
+
+Side 2
+<audio src="http://mp3.benchun.net/benchun-summer-of-99-side-2.mp3" preload="auto" controls></audio>  
+(download [side 1](http://mp3.benchun.net/benchun-summer-of-99-side-1.mp3), [side 2](http://mp3.benchun.net/benchun-summer-of-99-side-2.mp3))
 
 **Side 1**  
 Mass in Orbit – Fear (T.B.A. Mix)  
