--- a/_posts/2002-03-15-live-at-111.md
+++ b/_posts/2002-03-15-live-at-111.md
@@ -9,4 +9,5 @@ layout: post
 
 During WMC all the big promoters and DJs are out of town, which gives other people the chance to pick up nights. This was a fun one where everything seemed to just work.
 
-[benchun &#8211; Live at 111](http://mp3.benchun.net/benchun-live-at-111.mp3){: .wpaudio}
+<audio src="http://mp3.benchun.net/benchun-live-at-111.mp3" preload="auto" controls></audio>  
+(download [mp3](http://mp3.benchun.net/benchun-live-at-111.mp3))
