--- a/_posts/2003-12-01-fuck-the-top-40.md
+++ b/_posts/2003-12-01-fuck-the-top-40.md
@@ -7,7 +7,8 @@ layout: post
 
 Because I get sick of the records I play all the time, here are 10 underplayed tracks in 40 minutes. No hip-hop samples, no ragga vocals, no pop song remixes--just hard technical breakbeats, mixed rough, tough, and precise
 
-[benchun - Fuck the Top 40](http://mp3.benchun.net/benchun-fuck-the-top-40.mp3){: .wpaudio}
+<audio src="http://mp3.benchun.net/benchun-fuck-the-top-40.mp3" preload="auto" controls></audio>  
+(download [mp3](http://mp3.benchun.net/benchun-fuck-the-top-40.mp3))
 
 Bionic - Average Teenager  
 T-Boy - King of the Land (Terminalhead Mix)  
