--- a/_posts/2007-02-08-memekast-mk011.md
+++ b/_posts/2007-02-08-memekast-mk011.md
@@ -7,7 +7,8 @@ layout: post
 ---
 This is my first laptop mix and it pushed my ideas about being a DJ. The line between performance and production is blurring, and we like blur. Thank you to Jeremy for the opportunity to be a part of the [memekast](http://mk2systems.com/memekast/mk011.html).
 
-[benchun &#8211; memekast mk011](http://www.mk2systems.com/memekast/episodes/memekast_mk011_200702.mp3){: .wpaudio}
+<audio src="http://mp3.benchun.net/memekast_mk011_200702.mp3" preload="auto" controls></audio>  
+(download [mp3](http://mp3.benchun.net/memekast_mk011_200702.mp3))
 
 Wyclef Jean – Anything Can Happen (benchun edit)    
 Spearhead – Skin on the Drum (Bassnectar Remix)  
