--- a/_posts/2012-04-05-standby.md
+++ b/_posts/2012-04-05-standby.md
@@ -4,23 +4,13 @@ title: Standby
 date: 2012-04-05T03:03:12+00:00
 author: benchun
 layout: post
-guid: /?p=250
-permalink: /2012/04/standby/
-enclosure:
-  - |
-    |
-        http://mp3.benchun.net/benchun-standby.mp3
-        104073768
-        audio/mpeg
-
-categories:
-  - Music
 ---
 ![Standby](/wp-content/uploads/2012/04/cover-300.jpg){: srcset="/wp-content/uploads/2012/04/cover-300-150x150.jpg 150w, /wp-content/uploads/2012/04/cover-300.jpg 300w"}{: sizes="(max-width: 300px) 100vw, 300px"}
 
 This mix is, among other things: a half-remembered dream, a plot twist, an indulgence, that word on the tip of your tongue, a tradition trying to stop itself, a long time coming, a lovely view, life with a piano, life in midair, and not the fruit of experience, but experience itself.
 
-[benchun &#8211; Standby](http://mp3.benchun.net/benchun-standby.mp3){: .wpaudio}
+<audio src="http://mp3.benchun.net/benchun-standby.mp3" preload="auto" controls></audio>  
+(download [mp3](http://mp3.benchun.net/benchun-standby.mp3))
 
 Chance Waters x Gotye &#8211; Somebody That I Used To Know (Remixed by One Above)  
 Bonobo &#8211; The Keeper (Banks Remix)  
