--- a/_posts/2007-05-29-smashup.md
+++ b/_posts/2007-05-29-smashup.md
@@ -9,7 +9,8 @@ layout: post
 
 Retro party music for the 23rd century. Put a brick on the gas pedal.
 
-[benchun &#8211; Smashup](http://mp3.benchun.net/benchun-smashup.mp3){: .wpaudio}
+<audio src="http://mp3.benchun.net/benchun-smashup.mp3" preload="auto" controls></audio>  
+(download [mp3](http://mp3.benchun.net/benchun-smashup.mp3))
 
 Tom Burbank – Blabber Mouth  
 Coldcut – True Skool  
