--- a/_posts/2012-04-05-standby.md
+++ b/_posts/2012-04-05-standby.md
@@ -4,6 +4,7 @@ title: Standby
 date: 2012-04-05T03:03:12+00:00
 author: benchun
 layout: post
+redirect_from: "/2012/04/standby/"
 ---
 ![Standby](/wp-content/uploads/2012/04/cover-300.jpg){: srcset="/wp-content/uploads/2012/04/cover-300-150x150.jpg 150w, /wp-content/uploads/2012/04/cover-300.jpg 300w"}{: sizes="(max-width: 300px) 100vw, 300px"}
 
